[gd_scene load_steps=8 format=2]

[ext_resource path="res://MachineGunProjectile.gd" type="Script" id=1]
[ext_resource path="res://explosions/WateryExplosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Projectiles/pure/Pure_09.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/energy_bar_fill.png" type="Texture" id=4]
[ext_resource path="res://explosions/Explosions.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Basic",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Machine",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.42322, 21.5116 )

[node name="Projectile" type="Area2D"]
script = ExtResource( 1 )
speed = 2500
damage = 1
life = 1.0

[node name="WateryExplosion" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.7, 0.7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.992157, 0.952941, 0.0352941, 1 )
position = Vector2( 2.52418, -0.902821 )
scale = Vector2( 0.147327, 0.116996 )
frames = SubResource( 1 )
animation = "Machine"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.81532, -0.757248 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]

[node name="Explosion" parent="." instance=ExtResource( 5 )]
visible = false
scale = Vector2( 0.7, 0.7 )
animation = "default"
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="animation_finished" from="WateryExplosion" to="." method="_on_WateryExplosion_animation_finished"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
